# agb-ml-evolve-agent

./: .gitignore  README.md  agb-evolve-review.md  current-state.html  current-state.md  model_trust_agent_guide.md  pyproject.toml
experiments/agb_ireland_biomass_regression_20260608/: IMPLEMENTATION_PLAN.md
experiments/agb_usa_biomass_regression_20260529/: IMPLEMENTATION_PLAN.md
models/: inference_features.json  inference_features_embdstx.json  inference_features_embonly.json  inference_model.txt  inference_model_embdstx.txt  inference_model_embonly.txt
plans/: ireland-agb-test-v0.md  ireland-agb-test-v1.md
scripts/: apply_forest_mask.py  apply_forest_mask_ireland.py  compare_gaussian_vs_pointextract.py  export_bayfield_cofeatures.py  extract_disturbance_timing.py  extract_dynamic_world.py  extract_gaussian_features.py  extract_gedi_features.py  extract_ireland_aef.py  extract_iter2_features.py  extract_iter3_features.py  extract_pool_embeddings.py  fit_aef_affine.py  fix_gedi_counts.py  generate_findings_report.py  generate_report.py  infer_bayfield.py  infer_bayfield_embdstx.py  infer_bayfield_embonly.py  investigate_extended.py  investigate_gb.py  investigate_palsar_saturation.py  ireland_crosswalk.py  ireland_forest_mask_report.py  palsar_saturation_report.py  per_pixel_inference.py  plot_disturbance_pred_vs_obs.py  produce_split_audit.py  refit_aef_affine_production.py  regenerate_masked_outputs_ireland.py  run_disturbance_timing_experiment.py  run_dynamic_world_experiment.py  train_inference_model.py
tasks/: todo.md
tests/: bootstrap_smoke.sh
(+178 files in other folders)
