[project]
name = "agb-ml-agent-evolve"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.7.28",
    "geopandas>=1.1.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
]

[tool.ruff]
line-length = 100
